fix: fix delete refresh, window z-index, and rename z-index issues

--- a/src/components/system/desktop.css
+++ b/src/components/system/desktop.css
@@ -74,7 +74,7 @@
 	height: calc( 60px + var(--line-height) *2 + 8px);
 	margin: 0 0 10px 10px;
 	box-sizing: border-box;
-	position: relative;
+
 	outline: none;
 }
 .box{
@@ -137,8 +137,8 @@
 	max-width: 100%;
 	-webkit-line-clamp: unset; 
 	overflow:unset;
-	position: relative;
-	z-index: 20;
+	z-index: 999;
+
 }
 .editName{
 	cursor: text;
@@ -147,7 +147,7 @@
 	height: auto;
 	outline: dotted 2px #ffbb29;
 	background-color: rgba(255, 255, 255, 0.205);
-	position: relative;
+	z-index: 999;
 	z-index: 1;
 }
 .app:focus .name{
